--- a/mission_to_mars_.ipynb
+++ b/mission_to_mars_.ipynb
@@ -2,110 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "from bs4 import BeautifulSoup\r\n",
-    "from splinter import Browser\r\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
-   ],
+   "execution_count": 1,
+   "id": "62f36b2a",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from splinter import Browser\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "# Setup splinter\r\n",
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\r\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
-   ],
+   "execution_count": 2,
+   "id": "7306d9e4",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Driver [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+      "Get LATEST driver version for 94.0.4606\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Setup splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "url = 'https://redplanetscience.com/'\r\n",
-    "browser.visit(url)\r\n",
-    "browser.is_element_present_by_css('div.content_title', wait_time=3)"
-   ],
+   "execution_count": 3,
+   "id": "ac053277",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "url = 'https://redplanetscience.com/'\n",
+    "browser.visit(url)\n",
+    "browser.is_element_present_by_css('div.content_title', wait_time=3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "source": [
-    "html = browser.html\r\n",
-    "soup = BeautifulSoup(html, 'html.parser')\r\n",
-    "\r\n",
-    "\r\n",
-    "news_p = soup.find_all('div', class_ = 'article_teaser_body')\r\n",
-    "\r\n",
-    "news_heading = soup.select_one('div.list_text')\r\n",
-    "news_title =news_heading.find('div', class_='content_title').text\r\n",
-    "news_p = news_heading.find('div', class_='article_teaser_body').text\r\n",
-    "    #for quote in quotes:\r\n",
-    "     #   print('page:', x, '-------------')\r\n",
-    "      #  print(quote.text)\r\n",
-    "\r\n",
-    "    #browser.links.find_by_partial_text('Next').click()\r\n",
-    "    \r\n",
-    "news_title\r\n",
-    "news_p"
-   ],
+   "execution_count": 4,
+   "id": "89d9ad7a",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'They look like twins. But under the hood, the rover currently exploring the Red Planet and the one launching there this summer have distinct science tools and roles to play.'"
+       "\"Australia provides a great place for NASA's Mars 2020 and the ESA-Roscosmos ExoMars scientists to hone techniques in preparation for searching for signs ancient life on Mars.\""
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 17
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "\n",
+    "news_p = soup.find_all('div', class_ = 'article_teaser_body')\n",
+    "\n",
+    "news_heading = soup.select_one('div.list_text')\n",
+    "news_title =news_heading.find('div', class_='content_title').text\n",
+    "news_p = news_heading.find('div', class_='article_teaser_body').text\n",
+    "   \n",
+    "    \n",
+    "news_title\n",
+    "news_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9dc2e92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://mars.nasa.gov/system/news_items/list_view_images/8505_PIA23275-th.jpg'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use splinter to Click the featured mars image \n",
+    "# to bring up the full resolution image\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "featured_image = soup.find_all('div', class_ = 'list_image')\n",
+    "featured_image_url = featured_image[0].find(\"img\")[\"src\"]\n",
+    "featured_image_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0d6ce831",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-42-b3d4e8dceddd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mhtml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhtml\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msoup\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhtml\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'html.parser'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfeatured_imgage_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"img\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"jpg\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"src\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "c964f737",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
