--- a/mission_to_mars_.ipynb
+++ b/mission_to_mars_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "id": "62f36b2a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "id": "7306d9e4",
    "metadata": {},
    "outputs": [
@@ -27,9 +27,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Get LATEST driver version for 94.0.4606\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61]\n"
+      "Driver [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -125,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8f60dbd0",
+   "id": "d1f74dae",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d4995fd3",
+   "id": "582d251c",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "bc149974",
+   "id": "edaa6812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +181,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "80c20cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.visit(image_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5ad158a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
+       " <h3>Cerberus Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
+       " <h3>Schiaparelli Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
+       " <h3>Syrtis Major Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"valles.html\">\n",
+       " <h3>Valles Marineris Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "images = soup.find_all('div', class_=\"item\")\n",
+    "\n",
+    "images\n",
+    "\n",
+    "#for image in images:\n",
+    " #   h3 = image.find('h3')\n",
+    "  # href = link['href']\n",
+    "   # print('https://marshemispheres.com/'+ href)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bf6d00b4",
+   "id": "b32a4786",
    "metadata": {},
    "outputs": [],
    "source": []
