--- a/mission_to_mars_.ipynb
+++ b/mission_to_mars_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "id": "62f36b2a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "id": "7306d9e4",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Driver [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+      "Get LATEST driver version for 94.0.4606\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\bgood\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61]\n"
      ]
     }
    ],
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d1f74dae",
+   "id": "72031486",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "582d251c",
+   "id": "f4b421a7",
    "metadata": {},
    "outputs": [
     {
@@ -171,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "edaa6812",
+   "execution_count": 100,
+   "id": "2647cac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "80c20cd8",
+   "execution_count": 101,
+   "id": "61206c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,60 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "5ad158a9",
+   "execution_count": 102,
+   "id": "04c42447",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://marshemispheres.com/cerberus.html\n",
+      "https://marshemispheres.com/schiaparelli.html\n",
+      "https://marshemispheres.com/syrtis.html\n",
+      "https://marshemispheres.com/valles.html\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
-       " <h3>Cerberus Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
-       " <h3>Schiaparelli Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
-       " <h3>Syrtis Major Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"valles.html\">\n",
-       " <h3>Valles Marineris Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>]"
+       "['https://marshemispheres.com/cerberus.html',\n",
+       " 'https://marshemispheres.com/schiaparelli.html',\n",
+       " 'https://marshemispheres.com/syrtis.html',\n",
+       " 'https://marshemispheres.com/valles.html']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,20 +224,76 @@
    "source": [
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
-    "images = soup.find_all('div', class_=\"item\")\n",
+    "images = soup.find_all('div', class_=\"description\")\n",
     "\n",
     "images\n",
+    "image_urls=[]\n",
     "\n",
-    "#for image in images:\n",
-    " #   h3 = image.find('h3')\n",
-    "  # href = link['href']\n",
-    "   # print('https://marshemispheres.com/'+ href)"
+    "for image in images:\n",
+    "    link = image.find('a')\n",
+    "    href = link['href']\n",
+    "    print('https://marshemispheres.com/'+ href)\n",
+    "    image_urls.append('https://marshemispheres.com/'+ href)\n",
+    "\n",
+    "image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "98d2ebc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.visit(image_urls[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "af35df52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls = []\n",
+    "for url in image_urls:\n",
+    "\n",
+    "    browser.visit(url)\n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "    image = soup.find('img', class_ = 'wide-image')\n",
+    "    image_url= 'https://marshemispheres.com/'+image['src']\n",
+    "    title_tag = soup.find('h2', class_='title')\n",
+    "    title= title_tag.text\n",
+    "    hemisphere_image_urls.append({\"title\": title,\n",
+    "     'img_url': image_url})\n",
+    "    \n",
+    "hemisphere_image_urls"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32a4786",
+   "id": "deaf3ead",
    "metadata": {},
    "outputs": [],
    "source": []
